--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "rei": "rm -Rf node_modules && yarn install"
+    "rei": "rm -Rf node_modules && yarn install",
+    "deploy": "yarn build && rm -Rf ../miguelpine.github.io/*  && cp -r build/* ../miguelpine.github.io && cd ../miguelpine.github.io && git add -A && git commit -m \"new version\"  && git push"
   },
   "eslintConfig": {
     "extends": "react-app"
